--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
         
         <div class="display-area">
             <div class="status" id="status">
-                <div class="loading">AIモデルを読み込み中...</div>
+                <div class="loading">読み込み中...</div>
             </div>
             <div class="timer" id="timer">00:00</div>
             <div class="jump-count" id="jumpCount">0</div>
@@ -403,7 +403,7 @@
             </div>
             
             <div class="ai-advice">
-                <h3>🤖 AIアドバイス</h3>
+                <h3>🤖 アドバイス</h3>
                 <p id="aiAdvice">計測を完了すると、パフォーマンス分析とアドバイスが表示されます。</p>
             </div>
         </div>
